platform/research/kubernetes/apps/searxng/internal-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: searxng-http-route
  namespace: research
  annotations:
    external-dns.alpha.kubernetes.io/hostname: searxng.homelab.internal,searxng.teaglebuilt.tech
spec:
  parentRefs:
    - name: homelab-internal-gateway
      namespace: kube-system
  hostnames:
    - searxng.homelab.internal
    - searxng.teaglebuilt.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: searxng
          port: 8080
